fixed a minor alignment issue

--- a/index.css
+++ b/index.css
@@ -3,14 +3,15 @@
 
 .tree ul {
 	padding-top: 20px; position: relative;
-	
+	text-align: center;
 	transition: all 0.5s;
 	-webkit-transition: all 0.5s;
 	-moz-transition: all 0.5s;
 }
 
 .tree li {
-	float: left; text-align: center;
+	float: left; 
+	text-align: center;
 	list-style-type: none;
 	position: relative;
 	padding: 20px 5px 0 5px;
@@ -72,6 +73,7 @@ right connector from last child*/
 	border: 1px solid rgb(204, 204, 204);
 	padding: 5px 10px;
 	text-decoration: none;
+	text-align: center;
 	color: #666;
 	font-family: arial, verdana, tahoma;
 	font-size: 11px;
@@ -84,6 +86,8 @@ right connector from last child*/
 	transition: all 0.5s;
 	-webkit-transition: all 0.5s;
 	-moz-transition: all 0.5s;
+
+	width: 100px;
 }
 
 /*Time for some hover effects*/
